Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106874

Windows bluetooth LE discovery abort when bluetooth is OFF

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.7
    • 6.2
    • None
    • Windows
    • 8
    • 533cfc6a2c (qt/tqtc-qtconnectivity/6.2)
    • Foundation Sprint 67

    Description

      It seems the LE discovery crashes if bluetooth is OFF on Windows, and only on Qt 6.2

      At this point I suspect this is a combination of two things:

      The latter checks are in place starting Qt 6.3, as that was the version that introduced proper QBluetoothLocalDevice support on Windows and made it feasible. That would explain why this doesn't happen on later Qt versions.

      This theory still needs verifying though, but could explain it.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes