Check bluetooth adapter availability and power before device discovery

If the device discovery is attempted with a powered off adapter,
the windows bluetooth library throws an exception, ultimately leading
to a crash.

Fixes: QTBUG-106874
Change-Id: If4062e8ba577cc3c64ebad262869ea946267a04c
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>